# music-songwriter-credits

./: .env  .env.example  .gitignore  Dockerfile  README.md  TESTING.md  docker-compose.yml  pyproject.toml  requirements.txt
config/: pipeline.yaml
data/: sample_catalog.csv  test_songwriter.db
docs/: fuzzy_matching.md  job_scheduler.md  musicbrainz_db_integration.md
scripts/: demo_cli.py  import_catalog.py  migrate_add_isrc.py  setup_database.py  test_pipeline.py
songwriter_id/: __init__.py  __main__.py  pipeline.py  scheduler.py
songwriter_id/api/: __init__.py  acoustid.py  musicbrainz.py  musicbrainz_db.py  musicbrainz_db_part2.py  musicbrainz_db_part3.py  musicbrainz_db_publishers.py  musicbrainz_db_search.py
songwriter_id/audio/: __init__.py  fingerprinting.py
songwriter_id/data_ingestion/: __init__.py  importer.py  normalizer.py  parser.py
songwriter_id/database/: __init__.py  connection.py  models.py  setup.py
songwriter_id/database/migrations/: __init__.py  add_isrc_field.py
songwriter_id/ml/: entity_resolution.py
songwriter_id/review_interface/: README.md  __init__.py  app.py  job_manager.py
songwriter_id/review_interface/templates/: error.html  index.html  job_status.html  pipeline.html  review_track.html  system_status.html  track_detail.html  tracks.html
songwriter_id/utils/: __init__.py  name_matching.py
tests/: test_basic.py  test_data_ingestion.py  test_musicbrainz.py  test_musicbrainz_db.py
